--- a/browserstack.yml
+++ b/browserstack.yml
@@ -27,17 +27,17 @@ buildIdentifier: '#${BUILD_NUMBER}' # Supports strings along with either/both ${
 # Platforms object contains all the browser / device combinations you want to test on.
 # Entire list available here -> (https://www.browserstack.com/list-of-browsers-and-platforms/automate)
 platforms:
-  - os: OS X
-    osVersion: Big Sur
-    browserName: Chrome
-    browserVersion: latest
-  - os: Windows
-    osVersion: 10
-    browserName: Edge
-    browserVersion: latest
+  # - os: OS X
+  #   osVersion: Big Sur
+  #   browserName: Chrome
+  #   browserVersion: latest
+  # - os: Windows
+  #   osVersion: 10
+  #   browserName: Edge
+  #   browserVersion: latest
   - deviceName: Samsung Galaxy S22 Ultra
     browserName: chrome # Try 'samsung' for Samsung browser
-    osVersion: 12.0
+    osVersion: 11.0
 
 # ==========================================
 # BrowserStack Local
@@ -58,6 +58,6 @@ source: python-browserstack:sample-sdk:v1.0
 # Debugging features
 # ===================
 debug: false # <boolean> # Set to true if you need screenshots for every selenium command ran
-networkLogs: false # <boolean> Set to true to enable HAR logs capturing
+networkLogs: true # <boolean> Set to true to enable HAR logs capturing
 consoleLogs: errors # <string> Remote browser's console debug levels to be printed (Default: errors)
 # Available options are `disable`, `errors`, `warnings`, `info`, `verbose` (Default: errors)
