--- a/browserstack.yml
+++ b/browserstack.yml
@@ -11,15 +11,15 @@ accessKey: ${BROWSERSTACK_ACCESS_KEY}
 # ======================
 # The following capabilities are used to set up reporting on BrowserStack:
 # Set 'projectName' to the name of your project. Example, Marketing Website
-projectName: BrowserStack Samples 
+projectName: Mobile Phishing Project 
 # Set `buildName` as the name of the job / testsuite being run
-buildName: browserstack build 
+buildName: Testing
 # `buildIdentifier` is a unique id to differentiate every execution that gets appended to
 # buildName. Choose your buildIdentifier format from the available expressions:
 # ${BUILD_NUMBER} (Default): Generates an incremental counter with every execution
 # ${DATE_TIME}: Generates a Timestamp with every execution. Eg. 05-Nov-19:30
 # Read more about buildIdentifiers here -> https://www.browserstack.com/docs/automate/selenium/organize-tests
-buildIdentifier: '#${BUILD_NUMBER}' # Supports strings along with either/both ${expression}
+buildIdentifier: '#${BUILD_NUMBER} (${DATE_TIME})' # Supports strings along with either/both ${expression}
 
 # =======================================
 # Platforms (Browsers / Devices to test)
@@ -27,17 +27,21 @@ buildIdentifier: '#${BUILD_NUMBER}' # Supports strings along with either/both ${
 # Platforms object contains all the browser / device combinations you want to test on.
 # Entire list available here -> (https://www.browserstack.com/list-of-browsers-and-platforms/automate)
 platforms:
-  # - os: OS X
-  #   osVersion: Big Sur
-  #   browserName: Chrome
-  #   browserVersion: latest
-  # - os: Windows
-  #   osVersion: 10
-  #   browserName: Edge
-  #   browserVersion: latest
-  - deviceName: Samsung Galaxy S22 Ultra
-    browserName: chrome # Try 'samsung' for Samsung browser
-    osVersion: 11.0
+  - browserName: samsung
+    osVersion: 13.0
+    deviceName: Samsung Galaxy S23
+  # - browserName: chrome
+  #   osVersion: 13.0
+  #   deviceName: Samsung Galaxy S23
+  # - browserName: samsung
+  #   osVersion: 12.0
+  #   deviceName: Samsung Galaxy S22
+  # - browserName: chrome
+  #   osVersion: 12.0
+  #   deviceName: Samsung Galaxy S22
+  # - browserName: chrome
+  #   osVersion: 14.0
+  #   deviceName: Google Pixel 9
 
 # ==========================================
 # BrowserStack Local
