--- a/browserstack.yml
+++ b/browserstack.yml
@@ -27,9 +27,16 @@ buildIdentifier: '#${BUILD_NUMBER} (${DATE_TIME})' # Supports strings along with
 # Platforms object contains all the browser / device combinations you want to test on.
 # Entire list available here -> (https://www.browserstack.com/list-of-browsers-and-platforms/automate)
 platforms:
-  - browserName: samsung
-    osVersion: 13.0
-    deviceName: Samsung Galaxy S23
+  - browserName: chrome
+    browserVersion: latest - 1
+    osVersion: 11.0
+    deviceName: Xiaomi Redmi Note 11
+    realMobile: true
+  - browserName: chrome
+    browserVersion: latest - 1
+    osVersion: 11.0
+    deviceName: Oppo Reno 6
+    realMobile: true
   # - browserName: chrome
   #   osVersion: 13.0
   #   deviceName: Samsung Galaxy S23
@@ -61,7 +68,7 @@ source: python-browserstack:sample-sdk:v1.0
 # ===================
 # Debugging features
 # ===================
-debug: false # <boolean> # Set to true if you need screenshots for every selenium command ran
+debug: true # <boolean> # Set to true if you need screenshots for every selenium command ran
 networkLogs: true # <boolean> Set to true to enable HAR logs capturing
 consoleLogs: errors # <string> Remote browser's console debug levels to be printed (Default: errors)
 # Available options are `disable`, `errors`, `warnings`, `info`, `verbose` (Default: errors)
