--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,8 @@ browserstack_runner:
     custom_outfile: null # If outputting as single file, can specify custom file name (otherwise null)
     browser_versions_file: "./src/browserstack/targets/browser_versions.yml" # File containing desktop browser versions to limit the test to
     entries_per_file: 6 # My limit with 1 parallel thread is 6 (1 + 5 queued); see https://www.browserstack.com/docs/automate/selenium/queue-tests
+  output_analyzer:
+    output_directory: "./output_data"
 
 phishtank_fetcher:
   urls_directory: "./urls"
