testing without opera

--- a/src/browserstack/targets/all_targets/38.yml
+++ b/src/browserstack/targets/all_targets/38.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: firefox
+  browser_version: '124.0'
+- os: OS X
+  os_version: Sequoia
+  browser: firefox
   browser_version: '125.0'
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: firefox
   browser_version: '126.0'
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: firefox
   browser_version: '127.0'
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: firefox
   browser_version: '128.0'
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: firefox
   browser_version: '129.0'
-- os: OS X
-  os_version: Sequoia
-  browser: edge
-  browser_version: '122.0'
