--- a/src/browserstack/targets/all_targets/49.yml
+++ b/src/browserstack/targets/all_targets/49.yml
@@ -3,31 +3,31 @@
 # =======================================
 - os: ios
   os_version: '16'
-  browser: chromium
-  device: iPhone 14 Plus
-  real_mobile: true
-- os: ios
-  os_version: '16'
-  browser: iphone
-  device: iPhone 14 Plus
+  browser: ipad
+  device: iPad Pro 12.9 2020
   real_mobile: true
 - os: ios
   os_version: '16'
   browser: chromium
-  device: iPhone 14
+  device: iPad Pro 11 2022
   real_mobile: true
 - os: ios
   os_version: '16'
-  browser: iphone
-  device: iPhone 14
+  browser: ipad
+  device: iPad Pro 11 2022
   real_mobile: true
 - os: ios
   os_version: '16'
   browser: chromium
-  device: iPhone 13
+  device: iPad 10th
   real_mobile: true
 - os: ios
   os_version: '16'
-  browser: iphone
-  device: iPhone 13
+  browser: ipad
+  device: iPad 10th
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: chromium
+  device: iPad Pro 11 2020
   real_mobile: true
