--- a/src/browserstack/targets/all_targets/57.yml
+++ b/src/browserstack/targets/all_targets/57.yml
@@ -3,31 +3,31 @@
 # =======================================
 - os: ios
   os_version: '14'
-  browser: chromium
-  device: iPhone 12 Pro
+  browser: ipad
+  device: iPad 8th
   real_mobile: true
 - os: ios
-  os_version: '14'
+  os_version: '13'
   browser: iphone
-  device: iPhone 12 Pro
+  device: iPhone 11
   real_mobile: true
 - os: ios
-  os_version: '14'
-  browser: chromium
-  device: iPhone 12 Mini
-  real_mobile: true
-- os: ios
-  os_version: '14'
+  os_version: '13'
   browser: iphone
-  device: iPhone 12 Mini
+  device: iPhone SE 2020
   real_mobile: true
 - os: ios
-  os_version: '14'
-  browser: chromium
-  device: iPhone 12
+  os_version: '13'
+  browser: ipad
+  device: iPad Pro 12.9 2020
   real_mobile: true
 - os: ios
-  os_version: '14'
-  browser: iphone
-  device: iPhone 12
+  os_version: '13'
+  browser: ipad
+  device: iPad Pro 11 2020
+  real_mobile: true
+- os: ios
+  os_version: '13'
+  browser: ipad
+  device: iPad Mini 2019
   real_mobile: true
