--- a/src/browserstack/targets/all_targets/69.yml
+++ b/src/browserstack/targets/all_targets/69.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '10.0'
   browser: android
+  device: Samsung Galaxy Note 20
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: samsung
+  device: Samsung Galaxy A51
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
+  device: Samsung Galaxy A51
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
   device: Samsung Galaxy A11
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '10.0'
   browser: android
   device: Google Pixel 4
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: OnePlus 8
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: OnePlus 7T
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: Motorola Moto G9 Play
   real_mobile: true
