--- a/src/browserstack/targets/all_targets/49.yml
+++ b/src/browserstack/targets/all_targets/49.yml
@@ -3,6 +3,26 @@
 # =======================================
 - os: ios
   os_version: '16'
+  browser: iphone
+  device: iPhone SE 2020
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: chromium
+  device: iPad Pro 12.9 2022
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: ipad
+  device: iPad Pro 12.9 2022
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: chromium
+  device: iPad Pro 12.9 2020
+  real_mobile: true
+- os: ios
+  os_version: '16'
   browser: ipad
   device: iPad Pro 12.9 2020
   real_mobile: true
@@ -10,24 +30,4 @@
   os_version: '16'
   browser: chromium
   device: iPad Pro 11 2022
-  real_mobile: true
-- os: ios
-  os_version: '16'
-  browser: ipad
-  device: iPad Pro 11 2022
-  real_mobile: true
-- os: ios
-  os_version: '16'
-  browser: chromium
-  device: iPad 10th
-  real_mobile: true
-- os: ios
-  os_version: '16'
-  browser: ipad
-  device: iPad 10th
-  real_mobile: true
-- os: ios
-  os_version: '16'
-  browser: chromium
-  device: iPad Pro 11 2020
   real_mobile: true
