--- a/src/browserstack/targets/all_targets/60.yml
+++ b/src/browserstack/targets/all_targets/60.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '13.0'
   browser: android
+  device: Samsung Galaxy S23 Ultra
+  real_mobile: true
+- os: android
+  os_version: '13.0'
+  browser: samsung
+  device: Samsung Galaxy S23
+  real_mobile: true
+- os: android
+  os_version: '13.0'
+  browser: android
+  device: Samsung Galaxy S23
+  real_mobile: true
+- os: android
+  os_version: '13.0'
+  browser: android
   device: Google Pixel 7 Pro
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '13.0'
   browser: android
   device: Google Pixel 6 Pro
-  real_mobile: true
-- os: android
-  os_version: '13.0'
-  browser: android
-  device: OnePlus 11R
-  real_mobile: true
-- os: android
-  os_version: '13.0'
-  browser: samsung
-  device: Samsung Galaxy Tab S9
-  real_mobile: true
-- os: android
-  os_version: '13.0'
-  browser: android
-  device: Samsung Galaxy Tab S9
   real_mobile: true
