--- a/src/browserstack/targets/all_targets/62.yml
+++ b/src/browserstack/targets/all_targets/62.yml
@@ -3,6 +3,21 @@
 # =======================================
 - os: android
   os_version: '12.0'
+  browser: android
+  device: Samsung Galaxy S22 Plus
+  real_mobile: true
+- os: android
+  os_version: '12.0'
+  browser: samsung
+  device: Samsung Galaxy S22
+  real_mobile: true
+- os: android
+  os_version: '12.0'
+  browser: android
+  device: Samsung Galaxy S22
+  real_mobile: true
+- os: android
+  os_version: '12.0'
   browser: samsung
   device: Samsung Galaxy S21
   real_mobile: true
@@ -15,19 +30,4 @@
   os_version: '12.0'
   browser: android
   device: Google Pixel 6 Pro
-  real_mobile: true
-- os: android
-  os_version: '12.0'
-  browser: android
-  device: Google Pixel 6
-  real_mobile: true
-- os: android
-  os_version: '12.0'
-  browser: android
-  device: Google Pixel 5
-  real_mobile: true
-- os: android
-  os_version: '12.0'
-  browser: samsung
-  device: Samsung Galaxy Tab S8
   real_mobile: true
