--- a/src/browserstack/targets/all_targets/63.yml
+++ b/src/browserstack/targets/all_targets/63.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '12.0'
   browser: android
+  device: Google Pixel 6
+  real_mobile: true
+- os: android
+  os_version: '12.0'
+  browser: android
+  device: Google Pixel 5
+  real_mobile: true
+- os: android
+  os_version: '12.0'
+  browser: samsung
+  device: Samsung Galaxy Tab S8
+  real_mobile: true
+- os: android
+  os_version: '12.0'
+  browser: android
   device: Samsung Galaxy Tab S8
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '11.0'
   browser: android
   device: Samsung Galaxy S21 Ultra
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: samsung
-  device: Samsung Galaxy S21
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: android
-  device: Samsung Galaxy S21
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: samsung
-  device: Samsung Galaxy S21 Plus
   real_mobile: true
