--- a/src/browserstack/targets/all_targets/64.yml
+++ b/src/browserstack/targets/all_targets/64.yml
@@ -3,6 +3,21 @@
 # =======================================
 - os: android
   os_version: '11.0'
+  browser: samsung
+  device: Samsung Galaxy S21
+  real_mobile: true
+- os: android
+  os_version: '11.0'
+  browser: android
+  device: Samsung Galaxy S21
+  real_mobile: true
+- os: android
+  os_version: '11.0'
+  browser: samsung
+  device: Samsung Galaxy S21 Plus
+  real_mobile: true
+- os: android
+  os_version: '11.0'
   browser: android
   device: Samsung Galaxy S21 Plus
   real_mobile: true
@@ -15,19 +30,4 @@
   os_version: '11.0'
   browser: android
   device: Samsung Galaxy M52
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: samsung
-  device: Samsung Galaxy M32
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: android
-  device: Samsung Galaxy M32
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: samsung
-  device: Samsung Galaxy A52
   real_mobile: true
