--- a/src/browserstack/targets/all_targets/66.yml
+++ b/src/browserstack/targets/all_targets/66.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '11.0'
   browser: android
+  device: OnePlus 9
+  real_mobile: true
+- os: android
+  os_version: '11.0'
+  browser: android
+  device: Motorola Moto G71 5G
+  real_mobile: true
+- os: android
+  os_version: '11.0'
+  browser: android
+  device: Xiaomi Redmi Note 11
+  real_mobile: true
+- os: android
+  os_version: '11.0'
+  browser: android
   device: Vivo Y21
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '11.0'
   browser: android
   device: Oppo Reno 6
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: android
-  device: Oppo A96
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: samsung
-  device: Samsung Galaxy Tab S7
-  real_mobile: true
-- os: android
-  os_version: '11.0'
-  browser: android
-  device: Samsung Galaxy Tab S7
   real_mobile: true
