--- a/src/browserstack/targets/all_targets/68.yml
+++ b/src/browserstack/targets/all_targets/68.yml
@@ -3,6 +3,21 @@
 # =======================================
 - os: android
   os_version: '10.0'
+  browser: android
+  device: Samsung Galaxy S20 Plus
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: samsung
+  device: Samsung Galaxy S20 Ultra
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
+  device: Samsung Galaxy S20 Ultra
+  real_mobile: true
+- os: android
+  os_version: '10.0'
   browser: samsung
   device: Samsung Galaxy Note 20 Ultra
   real_mobile: true
@@ -15,19 +30,4 @@
   os_version: '10.0'
   browser: samsung
   device: Samsung Galaxy Note 20
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: Samsung Galaxy Note 20
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: samsung
-  device: Samsung Galaxy A51
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: Samsung Galaxy A51
   real_mobile: true
