--- a/src/browserstack/targets/all_targets/70.yml
+++ b/src/browserstack/targets/all_targets/70.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '10.0'
   browser: android
+  device: OnePlus 8
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
+  device: OnePlus 7T
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
+  device: Motorola Moto G9 Play
+  real_mobile: true
+- os: android
+  os_version: '10.0'
+  browser: android
   device: Xiaomi Redmi Note 9
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '10.0'
   browser: android
   device: Oppo Reno 3 Pro
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: samsung
-  device: Samsung Galaxy Tab S7
-  real_mobile: true
-- os: android
-  os_version: '10.0'
-  browser: android
-  device: Samsung Galaxy Tab S7
-  real_mobile: true
-- os: android
-  os_version: '14.0'
-  browser: samsung
-  device: Samsung Galaxy S24 Ultra
   real_mobile: true
