--- a/src/browserstack/targets/all_targets/73.yml
+++ b/src/browserstack/targets/all_targets/73.yml
@@ -3,6 +3,21 @@
 # =======================================
 - os: android
   os_version: '9.0'
+  browser: samsung
+  device: Samsung Galaxy S10 Plus
+  real_mobile: true
+- os: android
+  os_version: '9.0'
+  browser: android
+  device: Samsung Galaxy S10 Plus
+  real_mobile: true
+- os: android
+  os_version: '9.0'
+  browser: samsung
+  device: Samsung Galaxy S10
+  real_mobile: true
+- os: android
+  os_version: '9.0'
   browser: android
   device: Samsung Galaxy S10
   real_mobile: true
@@ -15,19 +30,4 @@
   os_version: '9.0'
   browser: android
   device: Samsung Galaxy A10
-  real_mobile: true
-- os: android
-  os_version: '9.0'
-  browser: android
-  device: Google Pixel 3
-  real_mobile: true
-- os: android
-  os_version: '9.0'
-  browser: android
-  device: OnePlus 7
-  real_mobile: true
-- os: android
-  os_version: '9.0'
-  browser: android
-  device: Motorola Moto G7 Play
   real_mobile: true
