--- a/src/browserstack/targets/all_targets/74.yml
+++ b/src/browserstack/targets/all_targets/74.yml
@@ -4,6 +4,21 @@
 - os: android
   os_version: '9.0'
   browser: android
+  device: Google Pixel 3
+  real_mobile: true
+- os: android
+  os_version: '9.0'
+  browser: android
+  device: OnePlus 7
+  real_mobile: true
+- os: android
+  os_version: '9.0'
+  browser: android
+  device: Motorola Moto G7 Play
+  real_mobile: true
+- os: android
+  os_version: '9.0'
+  browser: android
   device: Xiaomi Redmi Note 8
   real_mobile: true
 - os: android
@@ -15,19 +30,4 @@
   os_version: '9.0'
   browser: samsung
   device: Samsung Galaxy Tab S6
-  real_mobile: true
-- os: android
-  os_version: '9.0'
-  browser: android
-  device: Samsung Galaxy Tab S6
-  real_mobile: true
-- os: android
-  os_version: '8.1'
-  browser: samsung
-  device: Samsung Galaxy Note 9
-  real_mobile: true
-- os: android
-  os_version: '8.1'
-  browser: android
-  device: Samsung Galaxy Note 9
   real_mobile: true
