--- a/src/browserstack/targets/ios/11.yml
+++ b/src/browserstack/targets/ios/11.yml
@@ -4,30 +4,30 @@
 - os: ios
   os_version: '16'
   browser: chromium
+  device: iPad 10th
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: ipad
+  device: iPad 10th
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: chromium
+  device: iPad Pro 11 2020
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: ipad
+  device: iPad Pro 11 2020
+  real_mobile: true
+- os: ios
+  os_version: '16'
+  browser: chromium
   device: iPad 8th
   real_mobile: true
 - os: ios
   os_version: '16'
   browser: ipad
   device: iPad 8th
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: chromium
-  device: iPhone XS
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: iphone
-  device: iPhone XS
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: chromium
-  device: iPhone 13 Pro Max
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: iphone
-  device: iPhone 13 Pro Max
   real_mobile: true
