--- a/src/browserstack/targets/ios/14.yml
+++ b/src/browserstack/targets/ios/14.yml
@@ -4,30 +4,30 @@
 - os: ios
   os_version: '15'
   browser: chromium
-  device: iPad Air 5
+  device: iPhone SE 2022
   real_mobile: true
 - os: ios
   os_version: '15'
-  browser: ipad
-  device: iPad Air 5
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: chromium
-  device: iPad Mini 2021
-  real_mobile: true
-- os: ios
-  os_version: '15'
-  browser: ipad
-  device: iPad Mini 2021
-  real_mobile: true
-- os: ios
-  os_version: '14'
-  browser: chromium
-  device: iPhone 12 Pro Max
-  real_mobile: true
-- os: ios
-  os_version: '14'
   browser: iphone
-  device: iPhone 12 Pro Max
+  device: iPhone SE 2022
+  real_mobile: true
+- os: ios
+  os_version: '15'
+  browser: chromium
+  device: iPad 9th
+  real_mobile: true
+- os: ios
+  os_version: '15'
+  browser: ipad
+  device: iPad 9th
+  real_mobile: true
+- os: ios
+  os_version: '15'
+  browser: chromium
+  device: iPad Air 5
+  real_mobile: true
+- os: ios
+  os_version: '15'
+  browser: ipad
+  device: iPad Air 5
   real_mobile: true
