--- a/src/browserstack/targets/macosx/13.yml
+++ b/src/browserstack/targets/macosx/13.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '121.0'
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '122.0'
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '123.0'
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '124.0'
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '125.0'
 - os: OS X
   os_version: Monterey
-  browser: edge
+  browser: firefox
   browser_version: '126.0'
