--- a/src/browserstack/targets/macosx/27.yml
+++ b/src/browserstack/targets/macosx/27.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: OS X
   os_version: Sequoia
-  browser: chrome
-  browser_version: '127.0'
-- os: OS X
-  os_version: Sequoia
-  browser: chrome
+  browser: edge
   browser_version: '128.0'
 - os: OS X
   os_version: Sequoia
-  browser: chrome
+  browser: edge
   browser_version: '129.0'
 - os: OS X
   os_version: Sequoia
-  browser: edge
+  browser: safari
+  browser_version: '18.0'
+- os: OS X
+  os_version: Sequoia
+  browser: firefox
+  browser_version: '121.0'
+- os: OS X
+  os_version: Sequoia
+  browser: firefox
   browser_version: '122.0'
 - os: OS X
   os_version: Sequoia
-  browser: edge
+  browser: firefox
   browser_version: '123.0'
-- os: OS X
-  os_version: Sequoia
-  browser: edge
-  browser_version: '124.0'
