--- a/src/browserstack/targets/macosx/4.yml
+++ b/src/browserstack/targets/macosx/4.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: OS X
   os_version: Catalina
-  browser: edge
-  browser_version: '126.0'
-- os: OS X
-  os_version: Catalina
-  browser: edge
+  browser: firefox
   browser_version: '127.0'
 - os: OS X
   os_version: Catalina
-  browser: edge
+  browser: firefox
   browser_version: '128.0'
 - os: OS X
   os_version: Catalina
   browser: firefox
+  browser_version: '129.0'
+- os: OS X
+  os_version: Catalina
+  browser: firefox
+  browser_version: '130.0'
+- os: OS X
+  os_version: Big Sur
+  browser: chrome
+  browser_version: '120.0'
+- os: OS X
+  os_version: Big Sur
+  browser: chrome
   browser_version: '121.0'
-- os: OS X
-  os_version: Catalina
-  browser: firefox
-  browser_version: '122.0'
-- os: OS X
-  os_version: Catalina
-  browser: firefox
-  browser_version: '123.0'
