--- a/src/browserstack/targets/windows/8.yml
+++ b/src/browserstack/targets/windows/8.yml
@@ -4,24 +4,24 @@
 - os: Windows
   os_version: '11'
   browser: edge
-  browser_version: '120.0'
+  browser_version: '128.0'
 - os: Windows
   os_version: '11'
   browser: edge
+  browser_version: '129.0'
+- os: Windows
+  os_version: '11'
+  browser: firefox
   browser_version: '121.0'
 - os: Windows
   os_version: '11'
-  browser: edge
+  browser: firefox
   browser_version: '122.0'
 - os: Windows
   os_version: '11'
-  browser: edge
+  browser: firefox
   browser_version: '123.0'
 - os: Windows
   os_version: '11'
-  browser: edge
+  browser: firefox
   browser_version: '124.0'
-- os: Windows
-  os_version: '11'
-  browser: edge
-  browser_version: '125.0'
