--- a/src/browserstack/targets/browser_versions.yml
+++ b/src/browserstack/targets/browser_versions.yml
@@ -1,22 +1,41 @@
 firefox_versions:
-- 113
-- 115
-- 122
-- 123
-- 126
-- 127
-- 129
-- 130
-- 131
 - 132
-chrome_versions:
-- 124
-- 127
-- 128
-- 129
+- 131
 - 130
-edge_versions: []
-safari_versions: []
+- 129
+- 127
+- 126
+- 123
+- 122
+- 115
+- 113
+chrome_versions:
+- 130
+- 129
+- 128
+- 127
+- 125
+- 124
+- 123
+- 122
+- 121
+edge_versions: 
+- 128
+- 126
+- 123
+- 118
+- 114
+- 97
+- 93
+safari_versions: 
+- 18
+- 17
+- 16
+- 15
+- 14
+- 13
+- 12
+- 11
 opera_versions:
 - 12.16
 - 12.15
