--- a/src/browserstack/targets/all_targets/4.yml
+++ b/src/browserstack/targets/all_targets/4.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: Windows
   os_version: '10'
-  browser: chrome
-  browser_version: '125.0'
+  browser: firefox
+  browser_version: '113.0'
 - os: Windows
   os_version: '10'
-  browser: chrome
+  browser: firefox
+  browser_version: '115.0'
+- os: Windows
+  os_version: '10'
+  browser: firefox
+  browser_version: '122.0'
+- os: Windows
+  os_version: '10'
+  browser: firefox
+  browser_version: '123.0'
+- os: Windows
+  os_version: '10'
+  browser: firefox
+  browser_version: '126.0'
+- os: Windows
+  os_version: '10'
+  browser: firefox
   browser_version: '127.0'
-- os: Windows
-  os_version: '10'
-  browser: chrome
-  browser_version: '128.0'
-- os: Windows
-  os_version: '10'
-  browser: chrome
-  browser_version: '129.0'
-- os: Windows
-  os_version: '10'
-  browser: chrome
-  browser_version: '130.0'
-- os: Windows
-  os_version: '10'
-  browser: edge
-  browser_version: '93.0'
