--- a/src/browserstack/targets/all_targets/5.yml
+++ b/src/browserstack/targets/all_targets/5.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: Windows
   os_version: '10'
-  browser: edge
-  browser_version: '97.0'
+  browser: firefox
+  browser_version: '129.0'
 - os: Windows
   os_version: '10'
-  browser: edge
-  browser_version: '114.0'
+  browser: firefox
+  browser_version: '130.0'
 - os: Windows
   os_version: '10'
-  browser: edge
-  browser_version: '118.0'
+  browser: firefox
+  browser_version: '131.0'
 - os: Windows
   os_version: '10'
-  browser: edge
-  browser_version: '123.0'
+  browser: firefox
+  browser_version: '132.0'
 - os: Windows
-  os_version: '10'
-  browser: edge
-  browser_version: '126.0'
+  os_version: '11'
+  browser: chrome
+  browser_version: '121.0'
 - os: Windows
-  os_version: '10'
-  browser: edge
-  browser_version: '128.0'
+  os_version: '11'
+  browser: chrome
+  browser_version: '122.0'
