--- a/src/browserstack/targets/all_targets/9.yml
+++ b/src/browserstack/targets/all_targets/9.yml
@@ -3,25 +3,25 @@
 # =======================================
 - os: Windows
   os_version: '11'
-  browser: chrome
+  browser: firefox
+  browser_version: '127.0'
+- os: Windows
+  os_version: '11'
+  browser: firefox
+  browser_version: '129.0'
+- os: Windows
+  os_version: '11'
+  browser: firefox
   browser_version: '130.0'
 - os: Windows
   os_version: '11'
-  browser: edge
-  browser_version: '93.0'
+  browser: firefox
+  browser_version: '131.0'
 - os: Windows
   os_version: '11'
+  browser: firefox
+  browser_version: '132.0'
+- os: OS X
+  os_version: Sierra
   browser: edge
   browser_version: '97.0'
-- os: Windows
-  os_version: '11'
-  browser: edge
-  browser_version: '114.0'
-- os: Windows
-  os_version: '11'
-  browser: edge
-  browser_version: '118.0'
-- os: Windows
-  os_version: '11'
-  browser: edge
-  browser_version: '123.0'
