--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 browserstack_runner:
-  build_name: "iOS" # Name for the browserstack build
-  test_script: "./src/browserstack/tests/phish-test.py" # Test script to run
+  build_name: "Android" # Name for the browserstack build
+  test_script: "./src/browserstack/tests/visit-only.py" # Test script to run
   urls_file: "./urls/latest.yml" # Phishing URLs to test on the devices 
-  targets_src: "./src/browserstack/targets/ios" # Either the single file or directory of files containing the list of devices/configurations to test on
+  targets_src: "./src/browserstack/targets/android" # Either the single file or directory of files containing the list of devices/configurations to test on
   interrupted: False
   continue_point: "0.yml" # If the test was interrupted (specify in above boolean), can continue from a specific file
   target_generator:
@@ -14,7 +14,7 @@ browserstack_runner:
   output_analyzer:
     output_directory: "./output_data"
 
-phishtank_fetcher:
+phish_scraper:
   urls_directory: "./urls"
   source_csv: './urls/online-valid.csv'
   num_urls: 10 # Number of URLs to fetch from phishtank (argparse argument has precedence over this value)
