OK now fixed; will update instructions for data collection in a bit

--- a/src/browserstack/targets/custom.yml
+++ b/src/browserstack/targets/custom.yml
@@ -7,3 +7,8 @@
   browser: samsung
   device: Samsung Galaxy S23 Ultra
   real_mobile: true
+- os: android
+  os_version: '13.0'
+  browser: android
+  device: Samsung Galaxy S23 Ultra
+  real_mobile: true
