Data cleaning is for the most part complete, going to actually start playing with ML now

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Evaluation/transparent.csv
 Evaluation/blocked_page/blocked.csv
 Evaluation/transparent.csv
 transparent_test.csv
+MachineLearning/*.csv
