renaming to match our terminology; also incorporating old "batch" data collection

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,5 @@ Evaluation/transparent.csv
 Evaluation/blocked_page/blocked.csv
 Evaluation/transparent.csv
 transparent_test.csv
-MachineLearning/*.csv
-MachineLearning/old/
+Analytics/*.csv
+Analytics/old/
