--- a/browserstack.yml
+++ b/browserstack.yml
@@ -13,7 +13,7 @@ accessKey: ${BROWSERSTACK_ACCESS_KEY}
 # Set 'projectName' to the name of your project. Example, Marketing Website
 projectName: Mobile Phishing Project
 # Set `buildName` as the name of the job / testsuite being run
-buildName: PpfQ5CyT_All_Targets
+buildName: 27Douf7W_All_Targets
 # `buildIdentifier` is a unique id to differentiate every execution that gets appended to
 # buildName. Choose your buildIdentifier format from the available expressions:
 # ${BUILD_NUMBER} (Default): Generates an incremental counter with every execution
@@ -28,31 +28,14 @@ buildIdentifier: '#${BUILD_NUMBER} (${DATE_TIME})' # Supports strings along with
 # Entire list available here -> (https://www.browserstack.com/list-of-browsers-and-platforms/automate)
 # NOTE: We have saved various combinations of browsers and devices in the targets/ folder; simply copy-paste to here
 platforms:
-- os: OS X
-  os_version: Big Sur
-  browser: firefox
-  browser_version: '113.0'
-- os: ios
-  os_version: '14'
-  browser: ipad
-  device: iPad 8th
-  real_mobile: true
-- os: OS X
-  os_version: Catalina
-  browser: firefox
-  browser_version: '111.0'
 - os: Windows
-  os_version: '8.1'
+  os_version: '11'
   browser: firefox
-  browser_version: '112.0'
-- os: OS X
-  os_version: Mojave
-  browser: firefox
-  browser_version: '113.0'
+  browser_version: '130.0'
 - os: Windows
   os_version: '11'
   browser: chrome
-  browser_version: '123.0'
+  browser_version: '130.0'
 browserstackLocal: true # <boolean> (Default false)
 # browserStackLocalOptions:
 # Options to be passed to BrowserStack local in-case of advanced configurations
