--- a/src/browserstack/targets/custom.yml
+++ b/src/browserstack/targets/custom.yml
@@ -2,13 +2,7 @@
   os_version: '11'
   browser: firefox
   browser_version: '130.0'
-- os: android
-  os_version: '13.0'
-  browser: samsung
-  device: Samsung Galaxy S23 Ultra
-  real_mobile: true
-- os: android
-  os_version: '13.0'
-  browser: android
-  device: Samsung Galaxy S23 Ultra
-  real_mobile: true
+- os: Windows
+  os_version: '11'
+  browser: chrome
+  browser_version: '130.0'
